Fix aside stretch issue

--- a/src/android/style/card.less
+++ b/src/android/style/card.less
@@ -36,7 +36,6 @@ section ~ .card-list {
 
   aside {
     display: flex;
-    max-width: 15%;
     &:first-child {
       margin-right: 8px
     }
