--- a/src/ios/style/card.less
+++ b/src/ios/style/card.less
@@ -31,7 +31,6 @@ section ~ .card-list {
 
   aside {
     display: flex;
-    max-width: 15%;
     &:first-child {
       margin-right: 8px
     }
